[package]
name = "blockip"
version = "0.1.0"
authors = ["Henry Hao <haoyixian1994@hotmail.com>"]
edition = "2018"
description = "A server/client tool to block ip using iptables"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
